tests/negative/gold/monitor_test.gold
tests/negative/monitor_test.toit:7:13: error: Monitors may not have a super class
monitor Foo Bar:
            ^~~
Compilation failed.
